--- a/Сюжет/Фракции города/Бастион/Описание.md
+++ b/Сюжет/Фракции города/Бастион/Описание.md
@@ -2,22 +2,7 @@
 
 Со временем идеалы служителей Бастиона начали искажаться, для защиты порядка в Гептагоне начали применяться все более жесткие методы. Избиения виновных или тех, кто казался виновным, самосуд и публичные казни стали повседневностью. Стражники не пренебрегали силой, калечили и убивали других жителей города, прикрываясь великой целью и служением Изобретателю.
 
-## Стадии прохождения локации
-
-### Этап 1
-
-- Сюжет: Изобретатель говорит что фрагменты воспоминаний находятся в Бастионе, нам нужно собрать 5 фрагментов. Для начала нужно вступить в ряды служителей Бастиона и поискать фрагменты воспоминаний там. Нужно начать с поиска интенданта Бастиона. 
-- Цель: пройти испытания и сразиться за звание достойного служителя Бастиона на арене.
-- Стадии прохождения:
-	- Игрок появляется в храме потока.
-	- Идем в казарму к интенданту.
-	- Интендант отправляет нас в тренировочный лагерь, где игрок сражается с другими претендентами.
-	- …
-	- Мы получаем эмблему бастиона и приносим ее Изобретателю.
-
-
-
-## Референсы
+## Референсы локации
 
 ![[Pasted image 20240220061210.png]]
 
