--- a/Сюжет/Фракции города/Общая информация.md
+++ b/Сюжет/Фракции города/Общая информация.md
@@ -16,7 +16,7 @@ All present factions are connected to one of deadly sins in a matter of their pr
 | [[#Technomagical Alliance]] | Grace of Zeal      | Sloth           |
 | [[#Church of Heptagon]]     | Grace of Love      | Envy           |
 | [[#Inventor]]               | Grace of Modesty   | Pride           |
-# [[Бастион]] 
+# [Бастион](Описание.md) 
 
 **Sentinels of Bastion** live on the platform of the Heptagon, built in the form of a **Medieval Citadel**. They keep order in the city and help resolve the conflicts of the Lowlanders. Despite their menacing look, they rarely resort to violence, preferring to negotiate. But don't let their patience fool you - when it comes to combat, Sentinels are one of the most dangerous opponents. Leaded by general **Lewis Steelsinger**, army of Bastion Sentinels is power, you must count with. In combat they are using weapons, **charged by Flow**. 
 
